--- a/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/GummiBearKingdom/Views/Products/Create.cshtml
@@ -15,7 +15,7 @@
     @Html.LabelFor(model => model.Description)<br />
     @Html.EditorFor(model => model.Description)<br />
     @Html.LabelFor(model => model.Cost)<br />
-    @Html.EditorFor(model => model.Cost)<br />
+    <span>$</span>@Html.EditorFor(model => model.Cost)<br />
 
     <input type="submit" value="Create" class="btn btn-default" />
 
