--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -9,6 +9,6 @@
 
 <p>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(model => model.Name)</p>
 <p>@Html.DisplayNameFor(model => model.Description) : @Html.DisplayFor(model => model.Description)</p>
-<p>@Html.DisplayNameFor(model => model.Cost) : @Html.DisplayFor(model => model.Cost)</p>
+<p>@Html.DisplayNameFor(model => model.Cost) : <span>$</span>@Html.DisplayFor(model => model.Cost)</p>
 
 <p>@Html.ActionLink("Edit", "Edit", new { id = Model.ProductId }) | @Html.ActionLink("Back to Products", "Index")</p>
