--- a/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/GummiBearKingdom/Views/Products/Index.cshtml
@@ -29,7 +29,7 @@
         <tr>
             <td>@Html.DisplayFor(modelProduct => listProduct.Name)</td>
             <td>@Html.DisplayFor(modelProduct => listProduct.Description)</td>
-            <td>@Html.DisplayFor(modelProduct => listProduct.Cost)</td>
+            <td><span>$</span>@Html.DisplayFor(modelProduct => listProduct.Cost)</td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = listProduct.ProductId }) |
                 @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId }) |
