--- a/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/GummiBearKingdom/Views/Products/Create.cshtml
@@ -17,7 +17,7 @@
     @Html.LabelFor(model => model.Cost)<br />
    
     
-    <%= Html.EditorFor(model => model.Cost) %>
+    @Html.EditorFor(model => model.Cost)
     <input type="submit" value="Create" class="btn btn-default" />
 
 }
