--- a/GummiBearKingdom/Views/Home/Contact.cshtml
+++ b/GummiBearKingdom/Views/Home/Contact.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Title"]</h2>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    123 Sweet Treats Street<br />
+    Sunnyvale, CA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    555.555.1234
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>email:</strong> <a href="mailto:Support@example.com">GummiBearKingdom@example.com</a><br />
 </address>
