--- a/GummiBearKingdom/Views/Home/About.cshtml
+++ b/GummiBearKingdom/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Gummi Bear Kingdom";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Title"]</h2>
 
-<p>We are the world's largest supplier of gummi treats.'.</p>
+
+<h4>We are the world's largest supplier of gummi treats.</h4>
